adding week day letters

--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Sadorn</string>
     <string name="sunday">Sul</string>
 
+    <string name="monday_letter">L</string>
+    <string name="tuesday_letter">M</string>
+    <string name="wednesday_letter">M</string>
+    <string name="thursday_letter">Y</string>
+    <string name="friday_letter">G</string>
+    <string name="saturday_letter">S</string>
+    <string name="sunday_letter">S</string>
+
     <!-- About -->
     <string name="about">About</string>
     <string name="website_label">For the source codes visit</string>
