--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -315,6 +315,14 @@
     <string name="saturday">Dissabte</string>
     <string name="sunday">Diumenge</string>
 
+    <string name="monday_letter">DL</string>
+    <string name="tuesday_letter">DT</string>
+    <string name="wednesday_letter">DC</string>
+    <string name="thursday_letter">DJ</string>
+    <string name="friday_letter">DV</string>
+    <string name="saturday_letter">DS</string>
+    <string name="sunday_letter">DG</string>
+
     <!-- About -->
     <string name="about">Sobre</string>
     <string name="website_label">Més aplicacions senzilles i codi font a</string>
