--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
 
+    <string name="monday_letter">सो</string>
+    <string name="tuesday_letter">मं</string>
+    <string name="wednesday_letter">बू</string>
+    <string name="thursday_letter">गु</string>
+    <string name="friday_letter">शु</string>
+    <string name="saturday_letter">श</string>
+    <string name="sunday_letter">र</string>
+
     <!-- About -->
     <string name="about">के बारे में</string>
     <string name="website_label">अधिक एप्पस व सोर्स कोड</string>
