--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
 
+    <string name="monday_letter">H</string>
+    <string name="tuesday_letter">K</string>
+    <string name="wednesday_letter">SZ</string>
+    <string name="thursday_letter">CS</string>
+    <string name="friday_letter">P</string>
+    <string name="saturday_letter">SZ</string>
+    <string name="sunday_letter">V</string>
+
     <!-- About -->
     <string name="about">Információ</string>
     <string name="website_label">További egyszerű alkalmazások és a forráskód itt</string>
