--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
 
+    <string name="monday_letter">ב\'</string>
+    <string name="tuesday_letter">ג\'</string>
+    <string name="wednesday_letter">ד\'</string>
+    <string name="thursday_letter">ה\'</string>
+    <string name="friday_letter">ו\'</string>
+    <string name="saturday_letter">ש\'</string>
+    <string name="sunday_letter">א\'</string>
+
     <!-- About -->
     <string name="about">About</string>
     <string name="website_label">For the source codes visit</string>
