--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
 
+    <string name="monday_letter">月</string>
+    <string name="tuesday_letter">火</string>
+    <string name="wednesday_letter">水</string>
+    <string name="thursday_letter">木</string>
+    <string name="friday_letter">金</string>
+    <string name="saturday_letter">土</string>
+    <string name="sunday_letter">日</string>
+
     <!-- About -->
     <string name="about">アプリについて</string>
     <string name="website_label">もっとシンプルなアプリとソースコードは</string>
