--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -320,6 +320,14 @@
     <string name="saturday">Sobota</string>
     <string name="sunday">Niedziela</string>
 
+    <string name="monday_letter">P</string>
+    <string name="tuesday_letter">W</string>
+    <string name="wednesday_letter">Ś</string>
+    <string name="thursday_letter">CZ</string>
+    <string name="friday_letter">P</string>
+    <string name="saturday_letter">S</string>
+    <string name="sunday_letter">N</string>
+
     <!-- About -->
     <string name="about">O aplikacji</string>
     <string name="website_label">Nasza strona internetowa:</string>
