--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -320,6 +320,14 @@
     <string name="saturday">Суббота</string>
     <string name="sunday">Воскресенье</string>
 
+    <string name="monday_letter">П</string>
+    <string name="tuesday_letter">В</string>
+    <string name="wednesday_letter">С</string>
+    <string name="thursday_letter">Ч</string>
+    <string name="friday_letter">П</string>
+    <string name="saturday_letter">С</string>
+    <string name="sunday_letter">В</string>
+
     <!-- About -->
     <string name="about">О приложении</string>
     <string name="website_label">Исходный код можно найти по адресу</string>
