--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -323,6 +323,14 @@
     <string name="saturday">Sobota</string>
     <string name="sunday">Nedeľa</string>
 
+    <string name="monday_letter">P</string>
+    <string name="tuesday_letter">U</string>
+    <string name="wednesday_letter">S</string>
+    <string name="thursday_letter">Š</string>
+    <string name="friday_letter">P</string>
+    <string name="saturday_letter">S</string>
+    <string name="sunday_letter">N</string>
+
     <!-- About -->
     <string name="about">O aplikácií</string>
     <string name="website_label">Pre zdrojové kódy navštívte</string>
