--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">Cumartesi</string>
     <string name="sunday">Pazar</string>
 
+    <string name="monday_letter">P</string>
+    <string name="tuesday_letter">S</string>
+    <string name="wednesday_letter">Ç</string>
+    <string name="thursday_letter">P</string>
+    <string name="friday_letter">C</string>
+    <string name="saturday_letter">C</string>
+    <string name="sunday_letter">P</string>
+
     <!-- About -->
     <string name="about">Hakkında</string>
     <string name="website_label">Kaynak kodları için ziyaret edin</string>
