--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -316,6 +316,14 @@
     <string name="saturday">토요일</string>
     <string name="sunday">일요일</string>
 
+    <string name="monday_letter">월</string>
+    <string name="tuesday_letter">화</string>
+    <string name="wednesday_letter">수</string>
+    <string name="thursday_letter">목</string>
+    <string name="friday_letter">금</string>
+    <string name="saturday_letter">토</string>
+    <string name="sunday_letter">일</string>
+
     <!-- About -->
     <string name="about">앱정보</string>
     <string name="website_label">소스코드 공개 링크</string>
