--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -26,10 +26,10 @@
     <string name="change_filter">更改篩選條件</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">存儲權限是必要的</string>
+    <string name="no_storage_permissions">儲存空間權限是必要的</string>
     <string name="no_contacts_permission">聯絡人權限是必要的</string>
     <string name="no_camera_permissions">相機權限是必要的</string>
-    <string name="no_audio_permissions">聲音權限是必要的</string>
+    <string name="no_audio_permissions">音訊權限是必要的</string>
 
     <!-- Renaming -->
     <string name="rename_file">重新命名檔案</string>
@@ -37,7 +37,7 @@
     <string name="rename_file_error">無法重新命名檔案</string>
     <string name="rename_folder_error">無法重新命名資料夾</string>
     <string name="rename_folder_empty">資料夾名稱不得空白</string>
-    <string name="rename_folder_exists">已存在這名稱的資料夾</string>
+    <string name="rename_folder_exists">已經存在這名稱的資料夾</string>
     <string name="rename_folder_root">無法重新命名根目錄</string>
     <string name="rename_folder_ok">成功重新命名資料夾</string>
     <string name="renaming_folder">資料夾重新命名中</string>
@@ -57,7 +57,7 @@
     <string name="destination">目標</string>
     <string name="select_destination">選擇目標</string>
     <string name="click_select_destination">點此選擇目標</string>
-    <string name="invalid_destination">無法寫入所選的目標</string>
+    <string name="invalid_destination">無法寫入選擇的目標</string>
     <string name="please_select_destination">請選擇目標</string>
     <string name="source_and_destination_same">目標跟來源不能相同</string>
     <string name="copy_failed">無法複製檔案</string>
@@ -80,7 +80,7 @@
     <string name="create_new_folder">新增資料夾</string>
     <string name="name_taken">已經存在相同名稱的檔案或資料夾</string>
     <string name="invalid_name">名稱包含無效的字元</string>
-    <string name="empty_name">請輸入一個名字</string>
+    <string name="empty_name">請輸入一個名稱</string>
     <string name="unknown_error_occurred">發生未知的錯誤</string>
 
     <!-- File operation conflicts -->
@@ -89,7 +89,7 @@
     <string name="folder_already_exists">資料夾 \"%s\" 已經存在</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
-    <string name="append">添加到 \'_1\'</string>
+    <string name="append">附加 \'_1\'</string>
     <string name="apply_to_all">添加到全部衝突</string>
 
     <!-- File picker -->
@@ -120,9 +120,9 @@
     <string name="direct_children_count">子目錄數</string>
     <string name="files_count">總檔案數</string>
     <string name="resolution">解析度</string>
-    <string name="duration">持續時間</string>
-    <string name="artist">作者</string>
-    <string name="album">相簿</string>
+    <string name="duration">時間長度</string>
+    <string name="artist">演唱者</string>
+    <string name="album">專輯</string>
     <string name="focal_length">焦距</string>
     <string name="exposure_time">曝光時間</string>
     <string name="iso_speed">ISO速度</string>
@@ -137,14 +137,14 @@
     <string name="primary_color">主體顏色</string>
     <string name="restore_defaults">恢復預設</string>
     <string name="theme">主題</string>
-    <string name="changing_color_description">改變顏色將切換成「自訂」主題</string>
+    <string name="changing_color_description">改變顏色將切換成[自訂]主題</string>
     <string name="save">儲存</string>
     <string name="discard">丟棄</string>
-    <string name="undo_changes">恢復更改</string>
+    <string name="undo_changes">恢復變更</string>
     <string name="undo_changes_confirmation">確定要恢復變更嗎?</string>
     <string name="save_before_closing">尚未儲存變更。離開前是否儲存?</string>
-    <string name="apply_to_all_apps">將顏色套用於全部 Simple 應用程式</string>
-    <string name="share_colors_success">顏色更新成功。創建了一個名為 \'Shared\' 的新主題，未來請使用那來更新全部應用程式顏色。</string>
+    <string name="apply_to_all_apps">將顏色套用於[簡易]系列全部應用程式</string>
+    <string name="share_colors_success">顏色更新成功。新增了一個名為 \'Shared\' 的新主題，以後請使用那個來更新全部應用程式顏色。</string>
     <string name="purchase_thank_you">
         <![CDATA[
             請購買 <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> 來解鎖此功能及支持開發者。謝謝!
@@ -177,7 +177,7 @@
     <string name="unhide_folder">取消隱藏資料夾</string>
     <string name="temporarily_show_hidden">暫時顯示隱藏的檔案</string>
     <string name="stop_showing_hidden">停止顯示隱藏的檔案</string>
-    <string name="maximum_share_reached">您不能一次分享這麼多內容</string>
+    <string name="maximum_share_reached">你不能一次分享這麼多內容</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
@@ -212,8 +212,8 @@
     <string name="place_finger">請將您的手指放置在指紋感應器上</string>
     <string name="authentication_failed">驗證失敗</string>
     <string name="authentication_blocked">驗證被限制，請稍後再重試</string>
-    <string name="no_fingerprints_registered">您尚未有登錄的指紋，請在裝置的「設定」內添加</string>
-    <string name="go_to_settings">前往「設定」</string>
+    <string name="no_fingerprints_registered">你尚未有登錄的指紋，請在裝置的[設定]內添加</string>
+    <string name="go_to_settings">前往[設定]</string>
     <string name="protection_setup_successfully">密碼設置成功。若遺忘了，請重新安裝應用程式。</string>
     <string name="fingerprint_setup_successfully">保護設置成功。若再次設置時發生問題，請重新安裝應用程式。</string>
 
@@ -232,27 +232,27 @@
     </plurals>
 
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d秒鐘</item>
+        <item quantity="other">%d秒鐘</item>
     </plurals>
     <plurals name="in_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d分鐘</item>
+        <item quantity="other">%d分鐘</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d小時</item>
+        <item quantity="other">%d小時</item>
     </plurals>
 
     <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
-    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
-    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
-    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
+    <string name="alarm_goes_off_in_hours_minutes">鬧鈴將在%1$d小時%2$d分鐘後響起</string>
+    <string name="alarm_goes_off_in_hours">鬧鈴將在%d小時後響起</string>
+    <string name="alarm_goes_off_in_minutes">鬧鈴將在%d分鐘後響起</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
-    <string name="use_english_language">強制使用英文語言</string>
+    <string name="use_english_language">強制使用英語</string>
     <string name="avoid_whats_new">啟動時不顯示更新了什麼</string>
     <string name="show_hidden_items">顯示隱藏的項目</string>
     <string name="font_size">字體大小</string>
@@ -262,14 +262,14 @@
     <string name="extra_large">特大</string>
     <string name="password_protect_hidden_items">用密碼保護隱藏的物件</string>
     <string name="password_protect_whole_app">用密碼保護整個應用程式</string>
-    <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的「最後修改」數值</string>
+    <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的[最後修改]數值</string>
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
-    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
-    <string name="skip_delete_confirmation">永遠跳過刪除確認</string>
+    <string name="prevent_phone_from_sleeping">當程式在前景使用時，防止手機進入睡眠</string>
+    <string name="skip_delete_confirmation">刪除不再進行確認</string>
     <string name="enable_pull_to_refresh">啟用頂端下拉更新</string>
-    <string name="use_24_hour_time_format">Use 24-hour time format</string>
-    <string name="sunday_first">Start week on Sunday</string>
-    <string name="widgets">Widgets</string>
+    <string name="use_24_hour_time_format">使用24小時制</string>
+    <string name="sunday_first">每周由星期日開始</string>
+    <string name="widgets">小工具</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
@@ -278,15 +278,15 @@
     <string name="file_operations">檔案操作</string>
 
     <!-- Import / Export -->
-    <string name="importing">正在導入…</string>
-    <string name="exporting">正在導出…</string>
-    <string name="importing_successful">導入成功</string>
-    <string name="exporting_successful">導出成功</string>
-    <string name="importing_failed">導入成功</string>
-    <string name="exporting_failed">導出失敗</string>
-    <string name="importing_some_entries_failed">部分項目導入失敗</string>
-    <string name="exporting_some_entries_failed">部分項目導出失敗</string>
-    <string name="no_entries_for_exporting">未發現供導出的項目</string>
+    <string name="importing">正在匯入…</string>
+    <string name="exporting">正在匯出…</string>
+    <string name="importing_successful">匯入成功</string>
+    <string name="exporting_successful">匯出成功</string>
+    <string name="importing_failed">匯入成功</string>
+    <string name="exporting_failed">匯出失敗</string>
+    <string name="importing_some_entries_failed">部分項目匯入失敗</string>
+    <string name="exporting_some_entries_failed">部分項目匯出失敗</string>
+    <string name="no_entries_for_exporting">未發現供匯出的項目</string>
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
@@ -315,13 +315,13 @@
     <string name="saturday">星期六</string>
     <string name="sunday">星期日</string>
 
-    <string name="monday_letter">M</string>
-    <string name="tuesday_letter">T</string>
-    <string name="wednesday_letter">W</string>
-    <string name="thursday_letter">T</string>
-    <string name="friday_letter">F</string>
-    <string name="saturday_letter">S</string>
-    <string name="sunday_letter">S</string>
+    <string name="monday_letter">一</string>
+    <string name="tuesday_letter">二</string>
+    <string name="wednesday_letter">三</string>
+    <string name="thursday_letter">四</string>
+    <string name="friday_letter">五</string>
+    <string name="saturday_letter">六</string>
+    <string name="sunday_letter">日</string>
 
     <!-- About -->
     <string name="about">關於</string>
@@ -368,7 +368,7 @@
 		只有一個解決方法，就是經由你的裝置設定，把應用程式移動回內部儲存空間。</string>
     <string name="faq_2_title_commons">我想要支持您，但我無法捐款。還有什麼我能做的嗎?</string>
     <string name="faq_2_text_commons">當然好囉。你可以推廣關於這應用程式，或是給予好的反饋和評分。你也可以幫忙把這應用程式翻譯成新的語言，或者只更新一些現有的翻譯。
-		你可以在 https://github.com/SimpleMobileTools/General-Discussion 找到教學，或者若你需要幫忙，只要發個訊息到 <a href="hello@simplemobiletools.com">hello@simplemobiletools.com</a> 。</string>
+		你可以在 https://github.com/SimpleMobileTools/General-Discussion 找到教學，或者若你需要幫忙，只要發個訊息到 hello@simplemobiletools.com。</string>
     <string name="faq_3_title_commons">我誤刪了一些檔案，如何復原?</string>
     <string name="faq_3_text_commons">不幸地，沒有辦法。檔案經確認後就立即刪除了，沒有垃圾筒可用。</string>
     <string name="faq_4_title_commons">我不喜歡小工具的顏色，我能更改嗎?</string>
