simplify the reminder going off string, for easier translations

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -230,7 +230,24 @@
         <item quantity="one">%d hora</item>
         <item quantity="other">%d hores</item>
     </plurals>
+    <plurals name="days">
+        <item quantity="one">%d day</item>
+        <item quantity="other">%d days</item>
+    </plurals>
+    <plurals name="weeks">
+        <item quantity="one">%d week</item>
+        <item quantity="other">%d weeks</item>
+    </plurals>
+    <plurals name="months">
+        <item quantity="one">%d month</item>
+        <item quantity="other">%d months</item>
+    </plurals>
+    <plurals name="years">
+        <item quantity="one">%d year</item>
+        <item quantity="other">%d years</item>
+    </plurals>
 
+    <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
         <item quantity="one">%d segon</item>
         <item quantity="other">%d segons</item>
@@ -244,10 +261,8 @@
         <item quantity="other">%d hores</item>
     </plurals>
 
-    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
-    <string name="alarm_goes_off_in_hours_minutes">L\'alarma s\'apagarà en %1$d houres i %2$d minuts</string>
-    <string name="alarm_goes_off_in_hours">L\'alarma s\'apagarà en %d houres</string>
-    <string name="alarm_goes_off_in_minutes">L\'alarma s\'apagarà en %d minuts</string>
+    <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
+    <string name="alarm_goes_off_in">Time remaining till the alarm goes off: %s</string>
 
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
